# democratix

./: .env.example  .gitignore  ANALYSE_PROBLEME_SC.md  AUDIT_SECURITE.md  BUSINESS_PLAN.md  CHANGELOG.md  CLAUDE.md  CONTRACTS-FIX-GUIDE.md  CUsersDEEPGAMINGMultiversXDEMOCRATIXfrontend.env  DEBUG-DECRYPT-BUTTON.md  GUIDE_INTEGRATION_SMART_CONTRACT.md  INSTALLATION_WINDOWS.md  INTEGRATION_COMPLETE.md  INTEGRATION_STATUS.md  LICENSE  PLAN_ACTION_SOLO.md  PROBLEME_DEPLOIEMENT_SC.md  QUICKSTART.md  RAILWAY-ENV-VARS.txt  README.md  RESUME_DEPLOIEMENT.md  RESUME_EXECUTIF_FR.md  SOLUTION_FINALE.md  SYNTHESE_PROJET.md  UPGRADE_VOTING_CONTRACT.md  VERCEL-ENV-VARS.txt  capture-conversation.bat  capture-conversation.ps1  check_contract_abi.js  check_election.js  check_public_key.js  check_upgrades.js  docker-compose.yml  install-circom.sh  package-lock.json  package.json  railway.json
.claude/: GUIDE_CLAUDE_CODE.md  GUIDE_SAUVEGARDE_SIMPLE.md  PROJECT_CONTEXT.md  README.md  settings.json  settings.local.json
backend/: package.json  test-crypto.ts  test-email-no-template.js  test-email-simple.js  tsconfig.json
contracts/: build.sh  deploy-devnet.sh
contracts/voting/: Cargo.toml  build.sh  build_contract.sh  compile.sh
contracts/voting/meta/: Cargo.toml
contracts/voting/meta/src/: main.rs
contracts/voting/src/: crypto_mock.rs  lib.rs
contracts/voting/tests/: lib.rs  voting_test.rs
docs/: DEPLOIEMENT-RAILWAY-BACKEND.md  DEPLOIEMENT-VERCEL-STEPS.md  DOCS_INDEX.md  ELGAMAL-KEY-BACKUP-SPEC.md  GUIDE-DEPLOIEMENT-VERCEL.md  GUIDE-INTEGRATION-XPORTAL.md  PROGRESS.md  (+23 more)
(+346 files in other folders)
